@@ -12,7 +12,6 @@
         <junit.jupiter.version>5.6.1</junit.jupiter.version>
         <slf4j.version>1.7.30</slf4j.version>
         <vm.args>
-            --enable-preview
             --add-opens java.base/java.lang=novel
             --add-opens java.base/java.util=novel
             --add-opens java.base/java.lang.invoke=novel
@@ -47,9 +46,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>
-                        --enable-preview
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
